Changed Execution to use JavaExec Task