@@ -1,54 +1,41 @@
 package de.kontext_e.jqassistant.gradle;
 
-import org.gradle.api.DefaultTask;
 import org.gradle.api.Project;
-import org.gradle.api.file.ConfigurableFileCollection;
 import org.gradle.api.file.FileCollection;
 import org.gradle.api.logging.Logger;
 import org.gradle.api.logging.Logging;
-import org.gradle.api.plugins.JavaPluginConvention;
-import org.gradle.api.tasks.InputFiles;
+import org.gradle.api.plugins.JavaPluginExtension;
+import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.TaskAction;
-import org.gradle.process.internal.worker.WorkerProcessFactory;
 
-import javax.inject.Inject;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.List;
 
-public class Jqassistant extends DefaultTask {
+public class Jqassistant extends JavaExec {
     private static final Logger LOGGER = Logging.getLogger(Jqassistant.class);
 
-    private final ConfigurableFileCollection classpath;
     private final List<String> args = new ArrayList<>();
     private JqassistantPluginExtension extension;
     private Project projectToScan;
 
     public Jqassistant() {
-        classpath = getProject().files();
     }
 
-    @InputFiles
-    public FileCollection getClasspath() {
-        return classpath;
-    }
-
-    public void setClasspath(FileCollection classpath) {
-        this.classpath.setFrom(classpath);
-    }
-
-    @Inject
-    public WorkerProcessFactory getWorkerProcessBuilderFactory() {
-        throw new UnsupportedOperationException();
-    }
-
+    @Override
     @TaskAction
-    public void process() {
-        addDefaultScanDirs();
-
-        JqassistantWorkerManager manager = new JqassistantWorkerManager();
-        manager.runWorker(getProject().getProjectDir(), getWorkerProcessBuilderFactory(), getClasspath(), createSpec());
+    public void exec() {
+        //Necessary to use neo4Jv4 with Java 17 and above
+        //Problem is: "unkown option '--add-opens'" although it works on commandline
+//        setJvmArgs(List.of(
+//                "--add-opens java.base/java.lang=ALL-UNNAMED",
+//                "--add-opens java.base/sun.nio.ch=ALL-UNNAMED",
+//                "--add-opens java.base/java.io=ALL-UNNAMED"
+//        ));
+        setStandardInput(System.in);
+        args(createSpec().getArgs());
+        super.exec();
     }
 
     private void addDefaultScanDirs() {
@@ -63,9 +50,9 @@ public class Jqassistant extends DefaultTask {
 
     private void addConventionScanDirs(Project rootProject) {
         try {
-            final JavaPluginConvention javaPluginConvention = rootProject.getConvention().getPlugin(JavaPluginConvention.class);
-            if (javaPluginConvention != null && !javaPluginConvention.getSourceSets().isEmpty()) {
-                for (SourceSet sourceSet : javaPluginConvention.getSourceSets()) {
+            final JavaPluginExtension javaPluginExtension = rootProject.getExtensions().getByType(JavaPluginExtension.class);
+            if (!javaPluginExtension.getSourceSets().isEmpty()) {
+                for (SourceSet sourceSet : javaPluginExtension.getSourceSets()) {
                     FileCollection presentClassDirs = sourceSet.getOutput().getClassesDirs().filter(File::exists);
                     for (File asPath : presentClassDirs.getFiles()) {
                         extension.scanDirs("java:classpath::" + asPath.getAbsolutePath());
@@ -78,9 +65,10 @@ public class Jqassistant extends DefaultTask {
     }
 
     private JqassistantSpec createSpec() {
-        final JqassistantSpec jqassistantSpec = new JqassistantSpec()
-                .addArgs(args)
-                .addArgs(extension.getOptions());
+        final JqassistantSpec jqassistantSpec = new JqassistantSpec();
+
+        jqassistantSpec.addArgs(args);
+        jqassistantSpec.addArgs(extension.getOptions());
 
         if (!extension.getScanDirs().isEmpty()) {
             jqassistantSpec.addArgs("-f");
